# ChatRoom

./: README.md
ChatClient/: ChatClient.pro  LoginWidget.cpp  LoginWidget.h  LoginWidget.ui  addfriend.cpp  addfriend.h  addfriend.ui  addgroup.cpp  addgroup.h  addgroup.ui  application.cpp  application.h  application.ui  creategroup.cpp  creategroup.h  creategroup.ui  groupchat.cpp  groupchat.h  groupchat.ui  mainwidget.cpp  mainwidget.h  mainwidget.ui  privatechat.cpp  privatechat.h  privatechat.ui  recvfile.cpp  recvfile.h  res.qrc  sendthread.cpp  sendthread.h  tcp.cpp  tcp.h
ChatServer/: CMakeLists.txt  db.sql  main.cpp
ChatServer/Handle/: Handler.cpp  Handler.h
ChatServer/Log/: log.h
ChatServer/Server/: Server.cpp  Server.h
ChatServer/config/: server.ini
ChatServer/database/: chatdb.cpp  chatdb.h  chatinfo.cpp  chatinfo.h
ChatServer/thread/: threadpool.cpp  threadpool.h  workthread.cpp  workthread.h
